bug on mobile only work on fullscreen

--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ body {
 }
 
 #bar {
-  background-color: var(--color-gray-200);
+  background-color: var(--color-green-normal);
   height: 100%;
   transition: width 0.1s ease;
 }
